# EnchantSystem

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  attribute.sqlite3  drop.sqlite3  架構圖.xmind
include/: database.h  drop.h  equipment.h
lib/: CMakeLists.txt
lib/rbt/: rb_iterator.h  rb_node.h  rb_tree.h
lib/sqlite3/: CMakeLists.txt
src/: drop.cpp  equipment.cpp  main.cpp
test/: rbt.cpp
